--- a/style.css
+++ b/style.css
@@ -92,7 +92,7 @@ p{
     text-shadow: 4px 4px 5px black;
     color: whitesmoke;
 }
-h2{
+h2,h4{
     color: papayawhip;
     text-shadow: 4px 4px 5px black;
     line-height: 2.5rem;
