--- a/style.css
+++ b/style.css
@@ -103,3 +103,22 @@ main img{
     display: block;
     margin: auto;
 }
+@media screen and (min-width: 200px) {
+    main p,h1,h2,h3,h4{
+        font-size: 1rem;
+    }
+    footer{
+        font-size: 0.8rem;
+    }
+}
+@media screen and (min-width: 700px) {
+    main p,h4{
+        font-size: 1.5rem;
+    }
+    main h2{
+        font-size: 2.2rem;
+    }
+    footer{
+        font-size: 1rem;
+    }
+} 
