--- a/style.css
+++ b/style.css
@@ -62,6 +62,7 @@ footer img{
 header{
     position: sticky;
     top: 0;
+    z-index: 9999;
 }
 footer{
     width: inherit;
@@ -80,10 +81,10 @@ main{
     text-align: center;
     margin: 2rem auto 1rem;
     font-size: small;
-}
-p{
+    flex-grow: 1;
+    line-height: 1.5rem;
     text-align: center;
-    text-shadow: 4px 4px 5px black;
+    text-shadow: 4px 4px 5px black;  
     color: whitesmoke;
 }
 h2,h4{
@@ -97,10 +98,7 @@ main img{
     margin: auto;
 }
 audio{
-    display: block;
-    margin: 1rem auto auto;
+    margin: 0.5rem auto 2rem;
     height: 2rem;
-    width: 15rem;
-    box-shadow: 5px 5px 5px;
-    border-radius: 2rem;
+    width: 20rem;  
 }
